@@ -43,8 +43,6 @@
 
 #define	USG 1
 
-#define FIVE_ARG_PTRACE
-
 /* This system requires that we open a terminal with O_NOCTTY for it to
    not become our controlling terminal.  */
 
