@@ -20,8 +20,6 @@
    Foundation, Inc., 59 Temple Place - Suite 330,
    Boston, MA 02111-1307, USA.  */
 
-#define FIVE_ARG_PTRACE
-
 /* This system requires that we open a terminal with O_NOCTTY for it to
    not become our controlling terminal.  */
 
